<input disabled> does not fire click events after dispatchEvent https://bugs.webkit.org/show_bug.cgi?id=215461 <rdar://problem/67030950>

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests that are now passing.

* web-platform-tests/dom/events/Event-dispatch-click-expected.txt:
* web-platform-tests/html/semantics/forms/the-input-element/radio-input-cancel-expected.txt:

Source/WebCore:

We should allow mouse events from JS to get dispatched on disabled form controls. Only mouse events from the
user and calling input.click() should not cause an event to get dispatched on disabled form controls.

Tests: fast/dom/HTMLInputElement/disabled-checkbox-click.html
       fast/dom/HTMLInputElement/disabled-radio-click.html

* dom/Node.cpp:
(WebCore::Node::handleLocalEvents):
Allow mouse events from JS to get dispatched on disabled form controls. Trusted mouse events (events from
the user-agent) are still not dispatched on disabled form controls.

* html/RadioInputType.cpp:
(WebCore::RadioInputType::didDispatchClick):
Fix post activation behavior for radio input elements so that we set the elements' checkedness to false
if the activation was cancelled and we are not restoring the checkedness of the previously checked element
in the group.
- https://html.spec.whatwg.org/#the-input-element:legacy-canceled-activation-behavior (Step 2)

LayoutTests:

Extend layout test coverage.

* fast/dom/HTMLInputElement/disabled-checkbox-click-expected.txt: Added.
* fast/dom/HTMLInputElement/disabled-checkbox-click.html: Added.
* fast/dom/HTMLInputElement/disabled-radio-click-expected.txt: Added.
* fast/dom/HTMLInputElement/disabled-radio-click.html: Added.


Canonical link: https://commits.webkit.org/231275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269452 268f45cc-cd09-0410-ab3c-d52691b4dbfc