Source/WebCore/dom/Node.cpp
@@ -2371,7 +2371,7 @@ void Node::handleLocalEvents(Event& event, EventInvokePhase phase)
         return;
 
     // FIXME: Should we deliver wheel events to disabled form controls or not?
-    if (is<Element>(*this) && downcast<Element>(*this).isDisabledFormControl() && event.isMouseEvent() && !event.isWheelEvent())
+    if (is<Element>(*this) && downcast<Element>(*this).isDisabledFormControl() && event.isTrusted() && event.isMouseEvent() && !event.isWheelEvent())
         return;
 
     fireEventListeners(event, phase);
