Source/WebCore/html/RadioInputType.cpp
@@ -171,6 +171,8 @@ void RadioInputType::didDispatchClick(Event& event, const InputElementClickState
         ASSERT(element());
         if (button && button->isRadioButton() && button->form() == element()->form() && button->name() == element()->name())
             button->setChecked(true);
+        else
+            element()->setChecked(false);
     } else if (state.checked != element()->checked())
         fireInputAndChangeEvents();
 
